tests/sksl/errors/LayoutRepeatedQualifiers.glsl
### Compilation failed:

error: 20: layout qualifier 'origin_upper_left' appears more than once
    origin_upper_left,
    ^^^^^^^^^^^^^^^^^
error: 21: layout qualifier 'push_constant' appears more than once
    push_constant,
    ^^^^^^^^^^^^^
error: 22: layout qualifier 'blend_support_all_equations' appears more than once
    blend_support_all_equations,
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^
error: 23: layout qualifier 'color' appears more than once
    color,
    ^^^^^
error: 24: layout qualifier 'location' appears more than once
    location = 2,
    ^^^^^^^^
error: 25: layout qualifier 'offset' appears more than once
    offset = 2,
    ^^^^^^
error: 26: layout qualifier 'binding' appears more than once
    binding = 2,
    ^^^^^^^
error: 27: layout qualifier 'index' appears more than once
    index = 2,
    ^^^^^
error: 28: layout qualifier 'set' appears more than once
    set = 2,
    ^^^
error: 29: layout qualifier 'builtin' appears more than once
    builtin = 2,
    ^^^^^^^
error: 30: layout qualifier 'input_attachment_index' appears more than once
    input_attachment_index = 2,
    ^^^^^^^^^^^^^^^^^^^^^^
error: 31: layout qualifier 'spirv' appears more than once
    spirv,
    ^^^^^
error: 32: layout qualifier 'metal' appears more than once
    metal,
    ^^^^^
error: 33: layout qualifier 'wgsl' appears more than once
    wgsl,
    ^^^^
error: 34: layout qualifier 'rgba8' appears more than once
    rgba8,
    ^^^^^
error: 35: layout qualifier 'rgba32f' appears more than once
    rgba32f,
    ^^^^^^^
error: 36: layout qualifier 'r32f' appears more than once
    r32f
    ^^^^
error: 1: 'layout(color)' is only permitted in runtime effects
layout (
^^^^^^^^...
error: 1: 'layout(color)' is only permitted on 'uniform' variables
layout (
^^^^^^^^...
error: 1: 'layout(color)' is not permitted on variables of type 'float'
layout (
^^^^^^^^...
error: 1: only one backend qualifier can be used
layout (
^^^^^^^^...
error: 1: only one pixel format qualifier can be used
layout (
^^^^^^^^...
error: 1: layout qualifier 'push_constant' is not permitted here
layout (
^^^^^^^^...
error: 1: layout qualifier 'set' is not permitted here
layout (
^^^^^^^^...
24 errors
